--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
